# scheman

./: Cargo.toml  LICENSE
src/: main.rs  pretty_print.rs  schema.rs  to_schema.rs  to_typescript.rs
