[package]
name = "scheman"
version = "0.1.0"
authors = ["Shintaro Sakata <shintaro.sakata.tokyo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1"
dprint-plugin-typescript = "0.19.9"
Inflector = "0.11.4"